<resources>
    <string name="app_name">Secret Diary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simpan">simpan</string>
    <string name="judul">judul</string>
    <string name="tulis_cerita">apa cerita mu hari ini ?</string>
    <string name="my_profil">Profil Saya</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="ubah_tema">Ubah Tema</string>
    <string name="setting">setting</string>
    <string name="oke">oke</string>
    <string name="lupa_kata_sandi">lupa kata sandi ?</string>
    <string name="masukkan_kata_sandi">masukkan kata sandi</string>
    <string name="masukkan_kata_sandi_baru">Masukkan Kata Sandi Baru</string>
    <string name="pengingat_diari">Pengingat Diari</string>
    <string name="atur_waktu">Atur Waktu</string>
    <string name="pengingat_diary">Pengingat Diary</string>
    <string name="pesan_status_kamu">Pesan Status Kamu ?</string>
    <string name="nama_kamu">Nama Kamu ?</string>
    <string name="profil">Profil</string>
    <string name="frasa_alarm">Frasa Alarm</string>
    <string name="hobi">Hobi ?</string>
    <string name="warna_favorite">Warna Favorite ?</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Hapus</string>
</resources>
