<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:adjustViewBounds="true"
    android:cropToPadding="true"
    android:background="@drawable/ic_bg"
    tools:context=".PasswordActivity">

    <ImageView
        android:id="@+id/img_lock"
        android:layout_width="114dp"
        android:layout_height="95dp"
        android:src="@drawable/ic_baseline_lock_24"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="match_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:hint="@string/masukkan_kata_sandi"
        android:layout_gravity="center"
        android:background="@drawable/form"
        android:inputType="numberPassword"
        android:autofillHints="" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_oke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:text="@string/oke"
        android:textColor="#FFFFFF"
        android:layout_marginTop="350dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lupaPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:background="#FFFFFF"
        android:text="@string/lupa_kata_sandi"
        android:textColor="#C62828"/>


</LinearLayout>

