<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PengingatActvity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:layout_width="match_parent"
        app:layout_scrollFlags="scroll|enterAlways">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_kembali"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="left"
        android:backgroundTint="@color/white"
        android:background="@drawable/ic_arrow_back_white_18dp"
        tools:ignore="RtlHardcoded" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengingat_diary"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="13dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_pengingatDiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/pengingat_diari" />
        <Switch
            android:id="@+id/switch_pengingat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingStart="270dp"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp">
        <TextView
            android:id="@+id/tv_aturWaktu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/atur_waktu" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_aturWaktu"
            android:layout_marginStart="270dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_access_time_black_18dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp">
        <TextView
            android:id="@+id/tv_frasaAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/frasa_alarm" />

    </LinearLayout>


</LinearLayout>
