<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_account_circle_black_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="30dp"
                android:text="@string/my_profil"
                android:textColor="#4a4a4a"
                android:textSize="18dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_alarm_black_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="30dp"
                android:text="@string/pengingat_diary"
                android:textColor="#4a4a4a"
                android:textSize="18dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_lock_black_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="30dp"
                android:text="@string/ubah_kata_sandi"
                android:textColor="#4a4a4a"
                android:textSize="18dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_color_lens_black_48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="30dp"
                android:text="@string/ubah_tema"
                android:textColor="#4a4a4a"
                android:textSize="18dp"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>