<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:layout_width="match_parent"
        app:layout_scrollFlags="scroll|enterAlways">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_kembali"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="left"
        android:backgroundTint="@color/white"
        android:background="@drawable/ic_arrow_back_white_18dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profil"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_profil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        android:src="@drawable/ic_perm_identity_black_18dp"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/et_Nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:hint="@string/nama_kamu"/>

            <ImageButton
                android:id="@+id/btn_edtNama"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_edit_black_18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="300dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pesan_status_kamu"
                android:padding="20dp" />

            <ImageButton
                android:id="@+id/btn_edtStatus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_edit_black_18dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="370dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="TTL ?"
                android:padding="20dp" />

            <ImageButton
                android:id="@+id/btn_edtTTL"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_edit_black_18dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="440dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hobi"
                android:padding="20dp" />

            <ImageButton
                android:id="@+id/btn_edtHobi"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_edit_black_18dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="510dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/warna_favorite"
                android:padding="20dp" />

            <ImageButton
                android:id="@+id/btn_edtWarnaFav"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_edit_black_18dp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>