<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".AddUpdateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:layout_width="match_parent"
        app:layout_scrollFlags="scroll|enterAlways">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_kembali"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:backgroundTint="@color/white"
            android:background="@drawable/ic_arrow_back_white_18dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="285dp"
            android:background="@drawable/button"
            android:text="@string/simpan"
            android:textColor="#FFFFFF" />


    </androidx.appcompat.widget.Toolbar>

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:paddingTop="35dp"
        tools:layout_editor_absoluteY="-17dp">
           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/btn_tgl"
               android:layout_marginVertical="30dp"
               android:layout_marginStart="9dp"
               android:layout_height="35dp"
               android:layout_width="35dp"
               android:background="@drawable/ic_date_range_black_18dp__1_"
               />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/judul"
            android:inputType="textShortMessage"
            android:padding="9dp"
            android:background="#ffffff"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:hint="@string/tulis_cerita"
            android:background="#ffffff"
            android:gravity="top|start"
            android:padding="9dp"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:id="@+id/btmBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            tools:ignore="BottomAppBar">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_foto"
                style="@style/IconCerita"
                android:background="@drawable/ic_add_photo_alternate_black_18dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_text"
                style="@style/IconCerita"
                android:background="@drawable/ic_text_fields_black_18dp" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/IconCerita"
                android:background="@drawable/ic_mood_black_18dp" />
        </LinearLayout>



    </LinearLayout>



</RelativeLayout>
