<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8AD4F6"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingRight="15dp"
    android:paddingLeft="15dp"
    android:paddingBottom="10dp"
    tools:context=".CeritaFragment">

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="661dp"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/img_kembali"
            android:layout_width="77dp"
            android:layout_height="46dp"
            android:layout_gravity="left"
            android:background="@drawable/ic_arrow_back_white_18dp"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simpanCerita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="215dp"
            android:background="@drawable/button"
            android:text="@string/simpan"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="733dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:paddingTop="20dp"
        tools:layout_editor_absoluteY="-17dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_editJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="49dp"
            android:hint="@string/judul"
            android:inputType="text"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_editCerita"
            android:layout_width="match_parent"
            android:layout_height="477dp"
            android:hint="@string/tulis_cerita"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_foto"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_add_photo_alternate_black_18dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_wallpaper"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_palette_black_18dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_font"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_text_fields_black_18dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_emot"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_mood_black_18dp" />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
